--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+client:
+  base-url: http://localhost:5173
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306
@@ -13,7 +16,7 @@ spring:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
             client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: ${client.base-url}/login/callback
             authorization-grant-type: authorization_code
             scope:
               - profile_nickname
