chore: 토큰 응답 형식 SNAKE_CASE로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,8 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-info-authentication-method: POST
             user-name-attribute: id
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 authorization:
   issuer: http://localhost:8080
