--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,13 @@ spring:
             scope:
               - profile_nickname
               - profile_image
+          naver:
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
+            redirect-uri: ${client.base-url}/login/callback/naver
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            scope:
         provider:
           apple:
             authorization-uri: https://appleid.apple.com/auth/authorize
@@ -42,6 +49,11 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-info-authentication-method: POST
             user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
   jackson:
     property-naming-strategy: SNAKE_CASE
 
