feat: dev 로그인 시 redirect_uri 전달 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,3 +78,5 @@ authorization:
   authorization-base-uri: /oauth2/authorization
   redirection-base-uri: /login/oauth2/code
   token-uri: /oauth2/token
+  redirect-uri-parameter-allowed-registrations:
+    - dev
